--- a/HTML/font.html
+++ b/HTML/font.html
@@ -28,8 +28,13 @@
 </head>
 <body>
     <h1>THE NIGHT KING</h1>
-
+    <h2></h2>
+    <h2> hey lets go</h2>
+    <h2> hey lets go</h2>
+    <h2> hey lets go</h2>
+    <em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam nostrum aliquam dolor nesciunt explicabo ex? Neque et adipisci reiciendis obcaecati deserunt, tempora laborum? Fugiat repellendus, earum suscipit corrupti laborum rerum?</em>
     <P>the night  kim ng is a legendaary figure</P>
+    <h2></h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex sequi accusamus, fuga odio aliquam obcaecati error esse nostrum temporibus vero! Dolore, ipsam porro. Illum temporibus placeat a quasi, aliquam molestiae natus nobis veniam dolores, numquam velit et necessitatibus hic perferendis veritatis nemo labore similique amet vitae praesentium. Ducimus, ad? Possimus.</p>
 </body>
 </html>
